--- a/css/styles.css
+++ b/css/styles.css
@@ -1,446 +1,353 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,100..700;1,100..700&display=swap');
+
 *
 {
-    margin: 0;
     padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
- /* Estilos para pantallas más grandes (a partir de 769px) */
- @media (min-width: 769px) {
-    /* Aquí puedes escribir los estilos que se aplicarán en pantallas más
-    grandes */
 
-    #check
-    {
-        display: none;
-    }
-    .checkbtn
-    {
-        
-        display: none;
-    }
-    #encabezado
-    {
-        background-color: #332e29;
-        color: white;
-        display: flex;
-        justify-content: space-between;
-        height: 100px;
-    }
-    .logo_container
-    {
-        display: flex;
-        align-items: center
-    }
-    .logo_container i
-    {
-        padding-left: 20px;
-        font-size: 35px ;
-        color: #4abe4a;
-    
-    }
-    .links_container
-    {
-        display: flex;
-        align-items: center;
-        margin-right: 30px;
-    }
-    .links
-    {
-        display: flex;
-    }
-    .links li
-    {
-        margin-left: 30px;
-        /* list-style none para quitar los puntos de las listas */
-        list-style: none;
-        
-    }
-    .links li a
-    {
-        /* text-decoration para quitar el subrayado */
-        text-decoration: none; 
-        color: white;
-    }
-    main
-    {
-        padding: 20px;
-        background-color: aliceblue;
-    }
-    .section_acerca
-    {
-        margin-bottom: 20px;
-        background-color: #b2c5b9;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        height: 40vh;
-    }
-    .acerca_container
-    {
-        display: flex;
-        
-    }
-    .info_container
-    {
-        display: flex;
-        flex-direction: column;
-        width: 300px;
-        height: 300px;
-    }
-    .info_container div
-    {
-        padding-top: 15px;
-        text-align: right;
-    }
-    .img_container
-    {
-        margin-left: 30px;
-        border: 2px solid black;
-        width: 220px;
-        height: 220px;
-    }
-    .img_container img
-    {
-        width: 220px;
-        height: 220px;
-    }
-    .section_carousel
-    {
-        height: 600px;
-        margin-bottom: 20px;
-    }
-    
-    .img_container_2 img
+@media screen and (min-width:992px)
+{
+    .container-header
     {
         width: 100%;
-        height: 600px;
+        height: 100px;
+        background-color: #525e75;
+        padding:  20px 40px 20px 40px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
     }
-    .section_works
+    .container-icon i
     {
-        background-color: #b2c5b9;
-        padding :40px;
+        color: #92ba92;
+        font-size: 40px;
     }
-    .titulo_2
+    .container-icon i:hover
     {
-        color: #69533d;
-        margin-bottom: 20px;
+        color: #f1ddbf;
+        
     }
-    .trabajos_container
+    .container-navbar
+    {
+        width: 60%;
+    }
+    .navbar
     {
         display: flex;
         justify-content: space-evenly;
     }
-    .trabajo
+    .navbar li
     {
-        display: flex;
-        flex-direction: column;
         
-        width: 20%;
+        list-style: none;
     }
-    
-    .trabajo img{
-        width: 200px;   
-    }
-    .trabajo h3 
+    .navbar a
     {
-        text-align: left;
-        padding: 5px 0 10px 0;
-        color: #332e29;
-    }
-    .trabajo a, .trabajo p
-    {
-        text-align: left;
-        padding: 5px 0 10px 0;
-        color: black;
         text-decoration: none;
+        color: #92ba92;
+        font-family: "Roboto Mono", monospace;
+        font-weight: bold;
+        font-size: 17px;
     }
-    footer
+    .navbar a:hover
     {
-        background-color: #332e29 ;
-        padding: 2em;
+        color: #f1ddbf;
     }
-    footer h2
-    {
-        color: #4abe4a;
-        margin-bottom: 20px;
-    }
-    .redes_container li
     
-    {
-     list-style: none;
-     padding: 5px;
-    }
-    .redes_container a
-    {
-        color: #b2c5b9;
-        text-decoration:  none;
-        
-    }
-    .logo_2 a
-{
-    color: rgb(255, 255, 255);
-    position: fixed;
-    bottom: 22px;
-    right: 39px;
-    font-size: 25px;
-}
-
-
- }
-
-
-/* Estilos para pantallas más pequeñas (hasta 768px) */
-@media (max-width: 768px) {
-    /* Aquí puedes escribir los estilos que se aplicarán en pantallas más pequeñas */
-
-
-    #encabezado
-    {
-        background-color: #332e29;
-        display: flex;
-        justify-content: space-between;
-        
-    }
-    .links_container
+    .container-main
     {
         width: 100%;
+        background-color: #92ba92;
+        padding: 30px;
     }
-    .checkbtn
-    {
-        font-size: 40px;
-        color: #4abe4a;
-        float: right;
-        line-height: 80px;
-        margin-right: 60px;
-        cursor: pointer;
-    }
-    #check
-    {
-        display: none;
-    }
-   
-    .logo_container
+    .container-acerca
     {
         display: flex;
+        background-color: #525e75;
+        border-radius: 15px;
+        padding: 40px;
         align-items: center;
-        padding-left: 30px;
+        justify-content: center;
+        height: 300px;
     }
-    .logo_container i
+    .texto-acerca 
     {
-        font-size: 50px;
-        color: #4abe4a;
+        text-align: end;
+        width: 35%;
+        display: flex;
+        flex-direction: column;
+        padding: 20px;
+        font-family: sans-serif; 
+        
     }
-    .section_acerca
+    .texto-acerca h2
     {
-        padding-top: 50px;
+        padding: 10px;
+        
+        color: #f1ddbf;
+    } .texto-acerca p
+    {
+        padding: 10px;
+        color: white;
+    }
+    .img-crop 
+    {
+        height: 100%;
+        padding: 20px;
+    }
+    .img-crop img
+    {
+        height: 100%;
+    }
+    .section-carousel
+    {
+        
+        width: 100%;
         height: 500px;
-        padding-bottom: 40px;
-        background-color: #b2c5b9;
+        
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
-    .acerca_container
+    .container-carousel
+    {
+        width: 100%;
+        height: 400px;
+        background-color: #525e75;
+        border-radius: 10px;
+        position: relative;
+        overflow: hidden;
+        
+    }
+    .carousel
+    {
+        height: 100%;
+        width: 300%;
+        display: flex;
+        
+    }
+    .container-slider
+    {
+    width: calc(100%/3);
+    
+    }
+    .container-slider img
+    {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        border-radius: 10px;
+    }
+    .container-btns
+    {
+        padding: 20px;
+        display: flex;
+        position: absolute;
+        top:0;
+        width: 100%;
+        height: 100%;
+        align-items: center;
+        justify-content: space-between;
+        color: white;
+        font-weight: bolder;
+    }
+    .container-btns i
+    {
+        width: 20px;
+        height: 20px;
+        cursor: pointer;
+        border-radius: 2px;
+        text-align: center;
+    }
+    .container-btns i:hover
+    {
+        
+        color: #f1ddbf;
+    }
+    .section-works
+    {
+        background-color: #525e75;
+        padding: 20px;
+        border-radius: 15px;
+        font-family: "Roboto Mono", monospace;
+        margin-bottom: 40px;
+    }
+    .section-works > h2
+    {
+        padding: 20px;
+        color: #f1ddbf;
+    }
+    .container-works
+    {
+        display: flex;
+        justify-content: space-evenly;
+    }
+    .work
     {
         display: flex;
         flex-direction: column;
-        align-items: center;
-        height: 100%;
-        width: 100%;
+        width: 22.5%;
     }
-    .info_container
+    .img-crop-2
     {
-        height: 35%;
-        width: 40%;
+        
+        height: 200px;
+        width: 200px;
+        border-radius: 20px;
+        overflow:hidden;
     }
-    .info_container div
+    .work img
     {
-        padding: 0;
+        height: 200px;
+        width: 200px;
+    }
+    .work h2
+    {
+        padding: 10px 0px 10px 0px;
+        color: white;
+    }
+    .work p
+    {
+        font-size: 12px;
+        padding-bottom: 20px;
+        color: #92ba92;
+    }
+    .work a 
+    {
+        color: #f1ddbf;
+        text-decoration: none;
        
     }
-    .Titulo_1
+    .section-form
     {
-        color: #69533d;
-    }
-    .Titulo_1 h2, .p_1 p, .p_2 p
-    {
-        text-align: center;
-        
-    }
-    .img_container
-    {
-        width: 300px;
-        height: 300px;
-        border: 4px solid #69533d ;
-    }
-    .img_container img
-    {
-        width: 100%;
-        height: 100%;
-    }
-    .trabajos_container
-    {
-        display: flex;
-        flex-wrap: wrap;
-    }
-    .section_carousel
-    {
-        width: 100%;
-        height:550px;
-    }
-    .img_container_2
-    {
-        height: 100%;
-    }
-    .img_container_2 img
-    {
-        width: 100%;
-        height: 100%;
-    }
-    .section_works
-    {
-        background-color: #b2c5b9;
-        padding-top: 40px;
-
-    }
-    .titulo_2
-    {
-        margin-bottom: 20px;
-    }
-    .titulo_2 h2
-    {
-        text-align: center;
-        color: #69533d;
-    }
-    .trabajos_container
-    {
-        display: flex;
-        flex-wrap: wrap;
-        
-    }
-    .trabajo
-    {
+        background-color: #525e75;
+        padding: 20px;
         display: flex;
         flex-direction: column;
         align-items: center;
-        padding: 10px 0 10px 0;
+        justify-content: center;
+        font-family: sans-serif;
+        border-radius: 15px;
     }
-    .trabajo img
+    .section-form h1
     {
-        border-radius: 20px;
-        width: 300px;
-        margin-bottom: 30px;
+        margin: 10px 0 10px 0;
+        color: #f1ddbf;
+        font-size: 30px;
     }
-    .trabajo h3
+    .section-form p
     {
-        color:#4abe4a ;
-    }
-    .trabajo p
-    {
-        width: 40%;
-        padding: 10px 0 10px 0;
-    }
-    .trabajo a
-    {
-        text-decoration: none;
-        color: black;
-    }
-    footer
-    {
-        background-color: #332e29;
-        text-align: center;
-    }
-    footer h2
-    {
-        padding: 10px;
-    }
-    .redes_container li
-    {
-        padding: 10px;
-        
-    }
-    .redes_container ul li a
-    {
+        margin: 10px 0 10px 0;
+        font-style: italic;
         color: white;
-        text-decoration: none;
     }
-    
-    #encabezado ul
+    .form_1
     {
-        position: fixed;
+        border: 1px solid grey;
+        width: 40%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        border-radius: 5px;
+        padding: 30px;
+        color: #f1ddbf;
+
+    }
+    .form-part
+    {
+        margin-bottom: 40px;
+        display: flex;
         width: 100%;
-        height: 100vh;
-        background-color: #252117;
-        text-align: center;
-        top: 80px;
-        left: 100%;
+        justify-content: space-between;
+        align-items: center;
+        
+    }
+    .form-part label
+    {
+        margin-right: 10px;
+    }
+    .form-part input[type = "text"]
+    ,.form-part input[type = "email"]
+    {
+        background-color: #78938a;
+        border: none;
+        border-radius: 6px;
+        width: 60%;
+        padding: 5px;
+        font-size: 14px;
+        color: #f1ddbf;
+    }
+    .form-part textarea
+    {
+        width: 100%;
+        border: 0;
+        border-radius: 6px;
+        min-height: 200px;
+        margin-bottom: 10px;
+        padding: 7px;
+        resize: none;
+        width: 60%;
+        background-color: #f1ddbf;
+        color: #525e75;
+    }
+    .form-part-2 button
+    {
+        border: none;
+        background-color: #78938a;
+        color: white;
+        font-size: 14px;
+        padding: 20px;
+        border-radius: 7px;
+        cursor: pointer;
+    }
+    .container-footer
+    {
+        padding: 20px;
+        background-color: #78938a;
+        color: #525e75;
+        display: flex;
+        align-items: center;
+        
 
-        transition: all 0.5s;
     }
-    #check:checked ~ ul
+    .container-footer h1 
     {
-        left: 0;
-        display: block;
+        padding: 20px;
     }
-    .links li
+    .redes
     {
+        margin-left: 40px;
+        width: 70%;
         list-style: none;
-        padding-top: 20px;
-        height: 15%;
-        
-        
+        display: flex;
+        justify-content: space-between;
+    }
+    .redes li
+    {
+        margin-left: 30px;
         
     }
-    .links a
+    .redes a
     {
         text-decoration: none;
-        color: #4abe4a;
+        color: white;
     }
-.logo_2 a
-{
-    color: rgb(255, 255, 255);
-    position: fixed;
-    bottom: 22px;
-    right: 39px;
-    font-size: 25px;
+    .leaf-start
+    {
+        color: #f1ddbf;
+        font-size: 40px;
+        position: fixed;
+        bottom: 0;
+        right: 30px;
+    }
+
 }
-  }
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+@media screen and (max-width: 991px)
+{
+    
+}
